--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         <!--Start Form Section-->
         <section class="section__contact" id="contact">
-            <form class="contact__form" action="#" method="post" data-netlify="true">
+            <form class="contact__form" action="#" method="POST" data-netlify="true">
                 <h2>Contact me</h2>
                 <label for="name">Name:</label>
                 <input class="form__name" type="text" name="name" placeholder="Enter your name">
@@ -144,6 +144,7 @@
                 <textarea class="form__message" name="message" id="enterMessage" rows="10" placeholder="Enter your message"></textarea>
                 <input class="form__button" type="submit" value="SEND MESSAGE">
             </form>
+
             
         </section>
         <!--End Form Section-->
