--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         <!--Start Form Section-->
         <section class="section__contact" id="contact">
-            <form class="contact__form" action="https://formspree.io/f/xnqkywrw" method="POST">
+            <form class="contact__form" action="https://formspree.io/f/xbjvebdz" method="POST">
                 <h2>Contact me</h2>
                 <label for="name">Name:</label>
                 <input class="form__name" type="text" name="name" placeholder="Enter your name">
